[gd_scene load_steps=3 format=3 uid="uid://dc6ac221sqams"]

[ext_resource type="Script" path="res://Setup.gd" id="1_4vxnx"]
[ext_resource type="Texture2D" uid="uid://br671v4qifihv" path="res://assets/ui/help_outline_white_24dp.svg" id="1_jy0hw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4vxnx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="frame_pp" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/frame_pp"]
layout_mode = 2
size_flags_horizontal = 3
text = "R:/Gover/"
placeholder_text = "frame path"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/frame_pp"]
visible = false
layout_mode = 2
text = "Open"

[node name="context_pp" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/context_pp"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "R:/Gover/context.json"
placeholder_text = "context path"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/context_pp"]
visible = false
layout_mode = 2
text = "Open"

[node name="config_pp" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/config_pp"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "config path"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/config_pp"]
layout_mode = 2
text = "Open"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/config_pp"]
layout_mode = 2
text = "Edit"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="boot_controls" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/boot_controls"]
layout_mode = 2
text = "Start"

[node name="Button2" type="Button" parent="MarginContainer/VBoxContainer/boot_controls"]
layout_mode = 2
text = "Stop"

[node name="TargetState" type="Label" parent="MarginContainer/VBoxContainer/boot_controls"]
layout_mode = 2
text = "Unknown"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MarginContainer/VBoxContainer/boot_controls"]
layout_mode = 2
size_flags_horizontal = 3
stretch_mode = 1
alignment_horizontal = 2

[node name="TextureButton" type="TextureButton" parent="MarginContainer/VBoxContainer/boot_controls/AspectRatioContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("1_jy0hw")
ignore_texture_size = true
stretch_mode = 0

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Log" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Log"]
layout_mode = 2
offset_right = 464.0
offset_bottom = 445.0

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/TabContainer/Log/VBoxContainer"]
layout_mode = 2
text = "Show errors in overlay"

[node name="Adjuster" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="context_pp" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/Adjuster"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TabContainer/Adjuster/context_pp"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "script path"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/TabContainer/Adjuster/context_pp"]
layout_mode = 2
text = "Open"

[node name="Active Markers" type="Control" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/boot_controls/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/boot_controls/Button2" to="." method="_on_button_2_pressed"]
